--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../Styles/style.css" />
-    <script src="../Scripts/script.js" defer></script>
+    <link rel="stylesheet" href="Front_End/Styles/style.css" />
+    <script src="Front_End/Scripts/script.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -142,7 +142,7 @@
           <div class="project-card">
             <div class="project-image">
               <img
-                src="../Assets/EscritoFS_preto.jpg"
+                src="Front_End/Assets/EscritoFS_preto.jpg"
                 alt="Sistema de Autenticação"
               />
             </div>
