--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               </div>
               <div class="project-links">
                 <a
-                  href="https://github.com/SENAISP-Unid601-Projetos/FaceShield.git"
+                  href="https://github.com/orgs/FaceShield-SENAI-TCC/repositories"
                   class="btn"
                   target="_blank"
                   >Ver Código</a
