--- a/index.html
+++ b/index.html
@@ -220,13 +220,16 @@
               />
             </div>
             <div class="project-content">
-              <h3>Em Breve...</h3>
+              <h3>Calculadora On-line em React</h3>
               <p>Em processo...</p>
               <div class="tech-stack">
-                <span class="tech">Em processo...</span>
+                <span class="tech">HTML</span>
+                <span class="tech">JavaScript</span>
+                <span class="tech">CSS</span>
+                <span class="tech">React</span>
               </div>
               <div class="project-links">
-                <a href="#" class="btn" target="_blank">Ver Código</a>
+                <a href="https://github.com/alexsant22/Calculadora_React.git" class="btn" target="_blank">Ver Código</a>
               </div>
             </div>
           </div>
