--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@
             </div>
             <div class="project-content">
               <h3>Calculadora On-line em React</h3>
-              <p>Em processo...</p>
+              <p>
+                O projeto "Calculadora_React" é uma calculadora web responsiva,
+                desenvolvida em React e Vite. Ele suporta operações matemáticas
+                básicas, permite a alternância entre temas claro e escuro, e
+                pode ser operado tanto com o rato quanto com o teclado.
+              </p>
               <div class="tech-stack">
                 <span class="tech">HTML</span>
                 <span class="tech">JavaScript</span>
@@ -229,7 +234,12 @@
                 <span class="tech">React</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/alexsant22/Calculadora_React.git" class="btn" target="_blank">Ver Código</a>
+                <a
+                  href="https://github.com/alexsant22/Calculadora_React.git"
+                  class="btn"
+                  target="_blank"
+                  >Ver Código</a
+                >
               </div>
             </div>
           </div>
