--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
               />
             </div>
             <div class="project-content">
-              <h3>API de Funcionários</h3>
+              <h3>ColabManager</h3>
               <p>
-                O projeto "projetoFuncionariosBD" é um sistema simples
-                desenvolvido em Java e SQL para o gerenciamento de funcionários
-                em uma empresa. A base inicial do código foi desenvolvida em
-                Python.
+                Este projeto é um sistema de gerenciamento de colaboradores desenvolvido como uma 
+                API RESTful em Java. Construído com Spring Boot e JPA para gerenciar funcionários, 
+                cargos e departamentos, o sistema utiliza um banco de dados MySQL e foi concebido a 
+                partir de um protótipo inicial em Python.
               </p>
               <div class="tech-stack">
                 <span class="tech">Java</span>
