Imagem de Perfil Atualizada

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="hero-image">
             <img
-              src="Front_End/Assets/perfil.jpg"
+              src="Front_End/Assets/img_perfil2.jpg"
               alt="Desenvolvedor Back-end"
             />
           </div>
@@ -188,9 +188,10 @@
             <div class="project-content">
               <h3>ColabManager</h3>
               <p>
-                Este projeto é um sistema de gerenciamento de colaboradores desenvolvido como uma 
-                API RESTful em Java. Construído com Spring Boot e JPA para gerenciar funcionários, 
-                cargos e departamentos, o sistema utiliza um banco de dados MySQL e foi concebido a 
+                Este projeto é um sistema de gerenciamento de colaboradores
+                desenvolvido como uma API RESTful em Java. Construído com Spring
+                Boot e JPA para gerenciar funcionários, cargos e departamentos,
+                o sistema utiliza um banco de dados MySQL e foi concebido a
                 partir de um protótipo inicial em Python.
               </p>
               <div class="tech-stack">
