Habilidades e sobre mim atualizadas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
     <link rel="stylesheet" href="Front_End/Styles/style.css" />
     <script src="Front_End/Scripts/script.js" defer></script>
   </head>
@@ -38,11 +42,13 @@
         <div class="hero-content">
           <div class="hero-text">
             <h1>Olá, sou <span>Alexandre Santos</span></h1>
-            <h2>Desenvolvedor Back-end</h2>
+            <h2>Desenvolvedor Full Stack com foco em Back-end</h2>
             <p>
-              Especializado em criar soluções robustas e escaláveis utilizando
-              Java, Spring Boot e MySQL. Transformando ideias em realidade
-              através de código eficiente e bem estruturado.
+              Desenvolvo APIs escaláveis com Java/Spring e Node.js
+              (TypeScript/NestJS), com conhecimento em React para o Front-end.
+              Integrando bancos de dados SQL e aplicando boas práticas de
+              desenvolvimento. Foco em criar soluções eficientes que resolvem
+              problemas reais através de código bem estruturado.
             </p>
             <div class="hero-btns">
               <a href="#projects" class="btn">Ver Projetos</a>
@@ -78,25 +84,38 @@
         </div>
         <div class="about-content">
           <div class="about-text">
-            <h3>Desenvolvedor Back-end com foco em Java e Spring Boot</h3>
+            <h3>Desenvolvedor Full Stack com foco em Back-end</h3>
+
             <p>
-              Com formação em Técnico em Desenvolvimento de Sistemas, dedico-me
-              ao desenvolvimento de aplicações back-end robustas e escaláveis.
-              Minha experiência inclui criação de APIs RESTful, integração com
-              bancos de dados e implementação de sistemas de autenticação
-              seguros.
+              Com formação em Técnico em Desenvolvimento de Sistemas,
+              especializo-me em desenvolvimento back-end com
+              <strong>Java/Spring Boot</strong> e
+              <strong>Node.js/NestJS</strong>, complementando com conhecimentos
+              em front-end utilizando <strong>React</strong>. Essa combinação me
+              permite criar soluções completas e bem integradas, desde a API até
+              a interface.
             </p>
+
             <p>
-              Tenho grande vontade de resolver problemas complexos e estou
-              sempre buscando aprender novas tecnologias e metodologias para
-              melhorar minhas habilidades e entregar soluções de alta qualidade.
+              Possuo conhecimento sólido em
+              <strong>JavaScript/TypeScript</strong> para desenvolvimento full
+              stack, com experiência em <strong>React</strong> para interfaces
+              modernas. Também trabalho com <strong>Python</strong> para
+              automações e scripts, aplicando metodologias
+              <strong>ágeis (Scrum)</strong> para garantir entregas incrementais
+              de qualidade, com versionamento através do
+              <strong>Git & GitHub</strong>.
             </p>
+
             <p>
-              Quando não estou codificando, gosto de contribuir para projetos
-              open-source, participar de comunidades de desenvolvimento e
-              explorar novas ferramentas e frameworks.
+              Sou movido pela vontade de resolver problemas complexos e estou
+              constantemente aprendendo novas tecnologias para criar soluções
+              eficientes. Quando não estou codificando, contribuo para projetos
+              open-source e participo ativamente de comunidades de
+              desenvolvimento.
             </p>
           </div>
+
           <div class="about-skills">
             <h3>Minhas Habilidades e Ferramentas</h3>
             <div class="skills-list">
@@ -104,25 +123,65 @@
                 <i class="fab fa-java"></i>
                 <span>Java</span>
               </div>
+
               <div class="skill-item">
-                <i class="fas fa-leaf"></i>
+                <i class="devicon-spring-plain"></i>
                 <span>Spring Boot</span>
               </div>
+
               <div class="skill-item">
                 <i class="fas fa-code"></i>
                 <span>API REST</span>
               </div>
+
               <div class="skill-item">
-                <i class="fas fa-database"></i>
+                <i class="devicon-typescript-plain"></i>
+                <span>TypeScript</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="devicon-nestjs-plain"></i>
+                <span>NestJS</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="fab fa-node-js"></i>
+                <span>Node.js</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="fab fa-js-square"></i>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="fab fa-react"></i>
+                <span>React</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="devicon-mysql-plain"></i>
                 <span>MySQL</span>
               </div>
+
+              <div class="skill-item">
+                <i class="devicon-postgresql-plain"></i>
+                <span>PostgreSQL</span>
+              </div>
+
+              <div class="skill-item">
+                <i class="fab fa-python"></i>
+                <span>Python</span>
+              </div>
+
               <div class="skill-item">
                 <i class="fab fa-git-alt"></i>
                 <span>Git & GitHub</span>
               </div>
+
               <div class="skill-item">
-                <i class="fab fa-python"></i>
-                <span>Python</span>
+                <i class="fas fa-tasks"></i>
+                <span>Scrum</span>
               </div>
             </div>
           </div>
