Removi o form para envio de email

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <div class="container">
         <nav>
           <div class="logo">
-            <i class="fas fa-rocket"></i> Alex<span>Dev</span>
+            <a href="#home" style="color: inherit; text-decoration: none">
+              <i class="fas fa-rocket"></i> Alex<span>Dev</span>
+            </a>
           </div>
           <ul class="nav-links">
             <li><a href="#home">Início</a></li>
@@ -344,78 +346,18 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="contact-form">
-            <h3>Envie uma mensagem</h3>
-            <form id="contactForm" aria-label="Formulário de contato">
-              <div class="form-group">
-                <label for="name">Nome *</label>
-                <input
-                  type="text"
-                  id="name"
-                  name="name"
-                  required
-                  placeholder="Seu nome completo"
-                  aria-required="true"
-                />
-              </div>
-              <div class="form-group">
-                <label for="email">Email *</label>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  required
-                  placeholder="seu@email.com"
-                  aria-required="true"
-                />
-              </div>
-              <div class="form-group">
-                <label for="subject">Assunto *</label>
-                <input
-                  type="text"
-                  id="subject"
-                  name="subject"
-                  required
-                  placeholder="Ex: Proposta de trabalho"
-                  aria-required="true"
-                />
-              </div>
-              <div class="form-group">
-                <label for="message">Mensagem *</label>
-                <textarea
-                  id="message"
-                  name="message"
-                  required
-                  placeholder="Descreva sua mensagem aqui..."
-                  rows="5"
-                  aria-required="true"
-                ></textarea>
-              </div>
 
-              <div class="form-footer">
-                <button
-                  type="submit"
-                  class="submit-btn"
-                  aria-label="Enviar mensagem"
-                >
-                  Enviar Mensagem
-                </button>
-
-                <p class="alternative-contact">
-                  <small>
-                    <i class="fas fa-info-circle" style="margin-right: 5px"></i>
-                    Prefere enviar manualmente? Use:
-                    <a
-                      href="mailto:alexandre.santana2201@gmail.com?subject=Contato%20do%20Portfólio"
-                      aria-label="Enviar email diretamente para alexandre.santana2201@gmail.com"
-                    >
-                      alexandre.santana2201@gmail.com
-                    </a>
-                  </small>
-                </p>
-              </div>
-            </form>
+            <!-- Botão de email direto -->
+            <div style="margin-top: 30px">
+              <a
+                href="mailto:alexandre.santana2201@gmail.com?subject=Contato%20do%20Portfólio"
+                class="btn"
+                style="display: inline-block"
+              >
+                <i class="fas fa-paper-plane" style="margin-right: 8px"></i>
+                Enviar Email Direto
+              </a>
+            </div>
           </div>
         </div>
       </div>
